// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update Cypress Config should add and update existing properties 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    blah: 'i am a top level property',
    baseUrl: 'http://localhost:1234',
    component: {
        fixturesFolder: 'cypress/fixtures/cool',
        devServer: componentDevServer('tsconfig.spec.json', 'swc'),
        blah: 'i am a random property',
        video: true,
        chromeWebSecurity: false,
        specPattern: '**/*.cy.{js,jsx,ts,tsx}',
        supportFile: 'cypress/support/component.ts',
        videosFolder: '../../dist/cypress/apps/n/videos',
        screenshotsFolder: '../../dist/cypress/apps/n/screenshots'
    },
    e2e: {
        video: false,
        fileServerFolder: '.',
        fixturesFolder: './src/fixtures',
        integrationFolder: './src/e2e',
        supportFile: './src/support/e2e.ts',
        specPattern: '**/*.cy.{js,ts}',
        videosFolder: '../../dist/cypress/apps/myapp4299814-e2e/videos',
        screenshotsFolder: '../../dist/cypress/apps/myapp4299814-e2e/screenshots',
        chromeWebSecurity: false
    }
});
"
`;

exports[`Update Cypress Config should add property to default config 1`] = `
"import { defineConfig } from 'cypress';
import { nxComponentTestingPreset } from '@nrwl/react/plugins/component-testing';
import { nxE2EPreset } from '@nrwl/cypress/plugins/cypress-preset';
export default defineConfig({
    e2e: {
        ... nxE2EPreset(__dirname),
        baseUrl: 'http://localhost:1234'
    },
    component: {
        ... nxComponentTestingPreset(__dirname),
        video: false
    }
});
"
`;

exports[`Update Cypress Config should add property with spread config 1`] = `
"import { defineConfig } from 'cypress';
import { nxComponentTestingPreset } from '@nrwl/react/plugins/component-testing';
import { nxE2EPreset } from '@nrwl/cypress/plugins/cypress-preset';
export default defineConfig({
    e2e: {
        ...nxE2EPreset(__dirname),
        baseUrl: 'http://localhost:1234',
        video: false,
        screenshotsFolder: '../blah/another/value'
    },
    component: {
        ...nxComponentTestingPreset(__dirname),
        defaultCommandTimeout: 60000,
        video: false,
        screenshotsFolder: '../blah/another/value'
    }
});
"
`;

exports[`Update Cypress Config should delete a property with spread config 1`] = `
"import { defineConfig } from 'cypress';
import { nxComponentTestingPreset } from '@nrwl/react/plugins/component-testing';
import { nxE2EPreset } from '@nrwl/cypress/plugins/cypress-preset';
export default defineConfig({
    component: {
        ...nxComponentTestingPreset(__dirname),
        video: false
    },
    e2e: {
        ...nxE2EPreset(__dirname),
        screenshotsFolder: '../blah/another/value'
    }
});
"
`;

exports[`Update Cypress Config should not change the default config with removal 1`] = `
"import { defineConfig } from 'cypress';
import { nxComponentTestingPreset } from '@nrwl/react/plugins/component-testing';
import { nxE2EPreset } from '@nrwl/cypress/plugins/cypress-preset';
export default defineConfig({
    component:  nxComponentTestingPreset(__dirname),
    e2e:  nxE2EPreset(__dirname)
});
"
`;

exports[`Update Cypress Config should overwrite existing config 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    baseUrl: 'http://overwrite:8080',
    component: {
        devServer: componentDevServer('tsconfig.spec.json', 'swc')
    },
    e2e: {
        video: false
    }
});
"
`;

exports[`Update Cypress Config should remove properties 1`] = `
"import { defineConfig } from 'cypress';
import { componentDevServer } from '@nrwl/cypress/plugins/next';
export default defineConfig({
    component: {
        chromeWebSecurity: false,
        fixturesFolder: 'cypress/fixtures',
        supportFile: 'cypress/support/component.ts',
        videosFolder: '../../dist/cypress/apps/n/videos',
        screenshotsFolder: '../../dist/cypress/apps/n/screenshots'
    },
    e2e: {
        fileServerFolder: '.',
        fixturesFolder: './src/fixtures',
        integrationFolder: './src/e2e',
        supportFile: './src/support/e2e.ts',
        specPattern: '**/*.cy.{js,ts}',
        videosFolder: '../../dist/cypress/apps/myapp4299814-e2e/videos'
    }
});
"
`;
